--- a/assets/css/styke.css
+++ b/assets/css/styke.css
@@ -17,3 +17,27 @@ header .line{
     background-color: var(--color-primary);
     height: 15px;
 }
+
+.container{
+    max-width: 1140px;
+    margin: auto;
+}
+
+.header-area{
+    height:100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header-left img{
+    width: 64px;
+    height: 64px;
+}
+
+.header-search input{
+    font-size: 16px;
+    padding: 7px 10px;
+    border: 1px solid #999;
+    outline: 0;
+}
