--- a/assets/css/styke.css
+++ b/assets/css/styke.css
@@ -23,6 +23,20 @@ header .line{
     margin: auto;
 }
 
+.button{
+    display: inline-block;
+    border: 2px solid #454545;
+    padding: 12px 32px;
+    border-radius: 4px;
+    color: #454545;
+    text-decoration: none;
+}
+
+.button:hover{
+    color: white;
+    background-color: #454545;
+}
+
 .bar{
     background-color: var(--color-primary);
     width:168px;
@@ -44,7 +58,6 @@ h2{
     line-height: 50px;
     margin-bottom: 32px;
     margin-top: 16px;
-
 }
 
 .header-area{
@@ -128,6 +141,16 @@ h2{
     grid-template-columns: repeat(2, 1fr) ;
 }
 
+.area1-quote{
+    margin-bottom: 32px;
+}
+
+.area1-text{
+    margin-bottom: 32px;
+    font-size: 16px;
+    line-height: 26px;
+}
+
 .area1-content{
     padding: 80px;
 }
@@ -144,6 +167,38 @@ h2{
     grid-column: 2 / 3;
     grid-row: 1 / 3;
     background-image: url(/assets/images/f1.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+/* ================================================= Area2 ==============================================*/
+.area2{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr) ;
+}
+
+.area2-text{
+    margin-bottom: 32px;
+    font-size: 16px;
+    line-height: 26px;
+}
+
+.area2-content{
+    padding: 80px;
+}
+
+.area2-img1{
+    background-color: green;
+    height: 300px;
+    background-image: url(/assets/images/f4.jpg);
+    background-size: cover;
+    background-position: center;
+}
+.area2-img2{
+    background-color: red;
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+    background-image: url(/assets/images/f3.jpg);
     background-size: cover;
     background-position: center;
 }
