--- a/assets/css/styke.css
+++ b/assets/css/styke.css
@@ -250,3 +250,18 @@ h2{
     background-size: cover;
     background-position: left;
 }
+
+.area5{
+    background-image: url(/assets/images/bg4.jpg);
+    background-size: cover;
+    background-position: center;
+    height:600px;
+}
+
+/* ================================  Footer =============================*/
+footer{
+    background-color: #333;
+    color: white;
+    padding: 80px;;
+    text-align: center;
+}
